--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             {
                 nombre: 'Barcelona',
                 imagen: './Paginas-Chemis/imagenes/barcelona.jpg',
-                camisas: ['./imagenes/barcelona1.jpg', './Paginas-Chemis/imagenes/barcelona2.jpg',
+                camisas: ['./Paginas-Chemis/imagenes/barcelona1.jpg', './Paginas-Chemis/imagenes/barcelona2.jpg',
                     './Paginas-Chemis/imagenes/barcelona3.jpg', './Paginas-Chemis/imagenes/barcelona4.jpg',
                     './Paginas-Chemis/imagenes/barcelona5.jpg', './Paginas-Chemis/imagenes/barcelona6.jpg',
                     './Paginas-Chemis/imagenes/barcelona7.jpg', './Paginas-Chemis/imagenes/barcelona8.jpg',
