--- a/index.html
+++ b/index.html
@@ -92,6 +92,26 @@
             border: none;
             cursor: pointer;
         }
+
+        /* Estilos para pantallas pequeñas (teléfonos) */
+@media (max-width: 600px) {
+    body {
+        font-size: 18px;
+    }
+
+    .gallery {
+        flex-direction: column;
+    }
+
+    figure {
+        width: 100%;
+    }
+
+    #camisas img {
+        max-width: 100%;
+    }
+}
+
     </style>
 </head>
 
