--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             cursor: pointer;
         }
 
-     @media (max-width: 600px) {
+   @media (max-width: 600px) {
     body {
         font-size: 18px;
     }
@@ -106,6 +106,7 @@
     figure {
         width: 100%;
         text-align: center; /* centra el contenido del figure */
+        margin-right: 0; /* elimina el margen derecho */
     }
 
     #camisas img {
